test/trivial/deitz/test_use_before_def1.chpl
writeln(x);
var x : integer = 12;
